bugfix/error-header

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,7 +33,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
         labore et
       </p>
-      <button class="btn promo__btn js-open-modal" data-modal="5" aria-label="get promo code">
+      <button class="btn promo__btn js-open-modal" data-modal="sale" aria-label="get promo code">
         <svg class="promo__icon">
           <use href="./images/icons.svg#arrow-right"></use>
         </svg>
