--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,6 +1,6 @@
 .header.section {
   @include section-class(0, 0);
-   padding-top: 8px;
+  padding-top: 8px;
   @include mq(mobile) {
     @include section-class(0, 0);
     padding-top: 8px;
@@ -89,8 +89,14 @@
 }
 .header__button {
   color: $color-font-red;
-
   display: none;
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
+    color: #d41443;
+  }
+
   @include mq(tablet) {
     display: block;
     justify-content: center;
@@ -175,10 +181,11 @@
 
 .button-menu.is-active {
   position: fixed;
-  left: 90%;
+  right: 20px;
+
   @include mq(tablet) {
     position: fixed;
-    left: 93%;
+    right: 32px;
     top: 20px;
   }
 }
@@ -209,10 +216,6 @@
   line-height: 1.3;
   white-space: nowrap;
   color: $color-font-red;
-  
-    
-  
-  
 
   &:focus {
     background-color: $white-btn-bgc--active;
@@ -224,7 +227,6 @@
 }
 
 .mobile-menu {
-  
   display: block;
   z-index: 11;
   position: fixed;
@@ -235,15 +237,15 @@
   z-index: 10;
   height: 100%;
   opacity: 0;
-  
+
   transition: 450ms $functional-cubic;
   transform: translateX(100%);
   width: 250px;
-    top: 0;
-    right: 0;
-    
+  top: 0;
+  right: 0;
+
   @include mq(tablet) {
-    width: 40%;
+    // width: 40%;
     // height: 100%;
     // left: 60%;
   }
@@ -251,7 +253,7 @@
     display: none;
   }
 }
-.mobile-menu.is-open .header__button{
+.mobile-menu.is-open .header__button {
   display: none;
 }
 .mobile-menu.is-open {
@@ -286,7 +288,8 @@
 //     border-top: 1px solid #E18298 ;
 // }
 .mobile__item {
-  margin-left: 20px;
+  // margin-left: 20px;
+  padding-left: 20px;
   border-top: 1px solid #e18298;
 
   &:last-child {
