--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -13,7 +13,7 @@
                         </svg>
                     </button>
                 </div>
-                <div class="cards__side cards__side--back card-1">
+                <div class="cards__side cards__side--back card-1 animItems">
                     <h3 class="cards__title">ice cream</h3>
                     <p class="cards__desc">You flipped the card. Well done!</p>
                     <form class="cards__form promo-form js-speaker-form" name="promo-cod-form">
@@ -37,7 +37,7 @@
                         </svg>
                     </button>
                 </div>
-                <div class="cards__side cards__side--back card-2">
+                <div class="cards__side cards__side--back card-2 animItems">
                     <h3 class="cards__title">ice coffee</h3>
                     <p class="cards__desc">You flipped the card. Well done!</p>
                     <form class="cards__form promo-form js-speaker-form" name="promo-cod-form">
@@ -62,7 +62,7 @@
                         </svg>
                     </button>
                 </div>
-                <div class="cards__side cards__side--back card-3">
+                <div class="cards__side cards__side--back card-3 animItems">
                     <h3 class="cards__title">milkshakes</h3>
                     <p class="cards__desc">You flipped the card. Well done!</p>
                     <form class="cards__form promo-form js-speaker-form" name="promo-cod-form">
