--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,33 +1,73 @@
 <section class="section customer" id="customer">
-  <div class="customer__container">
-    <h2 hidden>slider customer hidden</h2>
-    <img
-      class="customer__photos"
-      src="/images/customer_reviews/slm/card1_result.webp"
-      alt="customer"
-    />
+  <div class="container">
 
-    <div class="customer__blockquote">
-      <div class="customer__svg">
-        <!-- <svg class="customer__svg" width="50" height="40">
-                <use href="/images/customer_reviews/slm/blockquote.svg">
-                </use>  
-              </svg> -->
+<div class="wrapper">
+    <h2 hidden>slider customer hidden</h2>
+<!-- Swiper -->
+<div class="swiper mySwiper">
+  <div class="swiper-wrapper">
+      <div class="swiper-slide"><img
+        class="swiper-slide"
+        src="/images/customer_reviews/slm/card1_result.webp"
+        alt="customer1"/>
       </div>
-      <p class="customer__text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit
-        nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+      <div class="swiper-slide"><img
+        class="swiper-slide"
+        src="/images/customer_reviews/slm/card2_result.webp"
+        alt="customer2"
+      /></div>
+      <div class="swiper-slide"><img
+        class="swiper-slide"
+        src="/images/customer_reviews/slm/card3_result.webp"
+        alt="customer3"/>
+    </div>
+  </div>
+
+    <div class="swiper-wrapper">
+    <div class="swiper-slide customer__blockquote">
+      <p class="swiper-slide customer__text">
+        The ice cream is truly incredible. You can sit inside depending on the time of day but it tends to get packed pretty often and early.The flavors are both Traditional Ice cream flavors and amazing uniquely Indian tastes. Favorites...
       </p>
     </div>
-    <!-- крапки -->
-    <ol class="customer__breadcrumb">
-      <li class="customer__item"></li>
-      <li class="customer__item"></li>
-      <li class="customer__item"></li>
-    </ol>
-    <p class="customer__comment">Emily, Los Angeles</p>
+    <div class="swiper-slide customer__blockquote">
+      <p class="swiper-slide customer__text">
+        Everyone in our group loved it. Mango was the bomb dot com. Service was fast. Staff were very friendly. Shop was very clean. Highly recommend!
+      </p>
+    </div>
+    <div class="swiper-slide customer__blockquote">
+      <p class="swiper-slide customer__text">
+         you like cones get the waffle cone. It is my favorite. The cone is fresh made and just delicious with this ice cream! You can buy the ice cream by the scoop of the multi-service Family pack..
+      </p>
+    </div>
   </div>
-  <!-- хатинка і еліпс -->
+
+   
+   <ul class="customer__breadcrumb">
+      <li class="customer__item"></li>
+      <li class="customer__item"></li>
+      <li class="customer__item"></li>
+    </ul>
+
+    <div class="swiper-wrapper">
+      <div class="swiper-slide 
+    customer__comment">Emily, Los Angeles</p>
+  </div>
+  <div class="swiper-slide 
+  customer__comment">Viktoria, Ukraine</p>
+</div> 
+ <div class="swiper-slide 
+    customer__comment">Ursula, Finland</p>
+  </div> 
+</div> 
+  <!-- Пагінація хатинки  -->
+  <div class="swiper-block">
+    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-pagination"></div>
+</div>
+  
+   <!-- хатинка і еліпс -->
+<!--    
   <ul class="customer__carusel">
     <li class="customer__home">
       <svg width="12" height="12">
@@ -38,11 +78,13 @@
       <svg width="12" height="12">
         <use href="/images/customer_reviews/slm/Ellipse.svg"></use>
       </svg>
-    </li>
-    <li class="customer__items">
+    </li> 
+   <li class="customer__items">
       <svg width="12" height="12">
         <use href="/images/customer_reviews/slm/Ellipse.svg"></use>
       </svg>
     </li>
   </ul>
-</section>
+</div>
+</div>
+</section>  -->
