--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -1,30 +1,67 @@
 <section class="section customer" id="customer">
-  <div class="container">
+  <h2 hidden>slider customer hidden</h2>
+  
 
-<div class="wrapper">
-    <h2 hidden>slider customer hidden</h2>
+    
 <!-- Swiper -->
-<div class="swiper mySwiper">
+<div class="swiper">
   <div class="swiper-wrapper">
-      <div class="swiper-slide"><img
-        class="swiper-slide"
-        src="/images/customer_reviews/slm/card1_result.webp"
-        alt="customer1"/>
+    <!-- swiper slide! -->
+      <div class="swiper-slide">
+        <div class="customer__container">
+         <!-- swiper slide! -->
+         <!-- CONTENT -->
+         <!-- IMG -->
+        <img class="customer__photos" src="/images/customer_reviews/slm/card1_result.webp" alt="customer">
+        <!-- TEXT -->
+        <div class="customer__blockquote">
+       <p class="customer__text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+       </p>
       </div>
-      <div class="swiper-slide"><img
-        class="swiper-slide"
-        src="/images/customer_reviews/slm/card2_result.webp"
-        alt="customer2"
-      /></div>
-      <div class="swiper-slide"><img
-        class="swiper-slide"
-        src="/images/customer_reviews/slm/card3_result.webp"
-        alt="customer3"/>
+      <!-- COMMENT -->
+      <p class="customer__comment">Emily, Los Angeles</p>
     </div>
   </div>
-
-    <div class="swiper-wrapper">
-    <div class="swiper-slide customer__blockquote">
+    <!-- SECOND SLIDE -->
+    <div class="swiper-slide">
+      <div class="customer__container">
+      <!-- swiper slide! -->
+      <!-- CONTENT -->
+      <!-- IMG -->
+     <img class="customer__photos" src="/images/customer_reviews/slm/card2_result.webp" alt="customer">
+     <!-- TEXT -->
+     <div class="customer__blockquote">
+    <p class="customer__text">
+       Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+    </p>
+   </div>
+   <!-- COMMENT -->
+   <p class="customer__comment">Emily, Los Angeles</p>
+ </div>
+</div>
+         <!-- THIRD SLIDE -->
+    <div class="swiper-slide">
+      <div class="customer__container">
+      <!-- swiper slide! -->
+      <!-- CONTENT -->
+      <!-- IMG -->
+     <img class="customer__photos" src="/images/customer_reviews/slm/card3_result.webp" alt="customer">
+     <!-- TEXT -->
+     <div class="customer__blockquote">
+    <p class="customer__text">
+       Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
+    </p>
+   </div>
+   <!-- COMMENT -->
+   <p class="customer__comment">Emily, Los Angeles</p>
+  </div>
+   </div>
+ </div>
+</div>
+</section>
+    
+    <!-- <div class="swiper-slide customer__blockquote">
       <p class="swiper-slide customer__text">
         The ice cream is truly incredible. You can sit inside depending on the time of day but it tends to get packed pretty often and early.The flavors are both Traditional Ice cream flavors and amazing uniquely Indian tastes. Favorites...
       </p>
@@ -46,25 +83,11 @@
       <li class="customer__item"></li>
       <li class="customer__item"></li>
       <li class="customer__item"></li>
-    </ul>
+    </ul> -->
 
-    <div class="swiper-wrapper">
-      <div class="swiper-slide 
-    customer__comment">Emily, Los Angeles</p>
-  </div>
-  <div class="swiper-slide 
-  customer__comment">Viktoria, Ukraine</p>
-</div> 
- <div class="swiper-slide 
-    customer__comment">Ursula, Finland</p>
-  </div> 
-</div> 
+    
   <!-- Пагінація хатинки  -->
-  <div class="swiper-block">
-    <div class="swiper-pagination"></div>
-    <div class="swiper-pagination"></div>
-    <div class="swiper-pagination"></div>
-</div>
+ 
   
    <!-- хатинка і еліпс -->
 <!--    
@@ -87,4 +110,5 @@
   </ul>
 </div>
 </div>
-</section>  -->
+</section>  --> 
+
