--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -20,6 +20,23 @@
        </p>
       </div>
       <!-- COMMENT -->
+      <ul class="customer__carusel">
+        <li class="customer__items">
+          <svg width="4" height="4">
+            <use href="/images/customer_reviews/slm/dots.svg"></use>
+          </svg>
+        </li>
+        <li class="customer__items">
+          <svg width="12" height="12">
+            <use href="/images/customer_reviews/slm/dots.svg"></use>
+          </svg>
+        </li> 
+       <li class="customer__items">
+          <svg width="4" height="4">
+            <use href="/images/customer_reviews/slm/dots.svg"></use>
+          </svg>
+        </li>
+      </ul>
       <p class="customer__comment">Emily, Los Angeles</p>
     </div>
   </div>
@@ -36,8 +53,26 @@
        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.
     </p>
    </div>
+
    <!-- COMMENT -->
-   <p class="customer__comment">Emily, Los Angeles</p>
+   <ul class="customer__carusel">
+    <li class="customer__items">
+      <svg width="4" height="4">
+        <use href="/images/customer_reviews/slm/dots.svg"></use>
+      </svg>
+    </li>
+    <li class="customer__items">
+      <svg width="12" height="12">
+        <use href="/images/customer_reviews/slm/dots.svg"></use>
+      </svg>
+    </li> 
+   <li class="customer__items">
+      <svg width="4" height="4">
+        <use href="/images/customer_reviews/slm/dots.svg"></use>
+      </svg>
+    </li>
+  </ul>
+   <p class="customer__comment">Viktoria, Ukraine</p>
  </div>
 </div>
          <!-- THIRD SLIDE -->
@@ -54,10 +89,28 @@
     </p>
    </div>
    <!-- COMMENT -->
-   <p class="customer__comment">Emily, Los Angeles</p>
+   <ul class="customer__carusel">
+    <li class="customer__items">
+      <svg width="4" height="4">
+        <use href="/images/customer_reviews/slm/dots.svg"></use>
+      </svg>
+    </li>
+    <li class="customer__items">
+      <svg width="12" height="12">
+        <use href="/images/customer_reviews/slm/dots.svg"></use>
+      </svg>
+    </li> 
+   <li class="customer__items">
+      <svg width="4" height="4">
+        <use href="/images/customer_reviews/slm/dots.svg"></use>
+      </svg>
+    </li>
+  </ul> 
+   <p class="customer__comment">Ursula, Norway</p>
   </div>
    </div>
  </div>
+ <div class="swiper-pagination"></div>
 </div>
 </section>
     
@@ -78,37 +131,19 @@
     </div>
   </div>
 
-   
-   <ul class="customer__breadcrumb">
+    <ul class="customer__breadcrumb">
       <li class="customer__item"></li>
       <li class="customer__item"></li>
       <li class="customer__item"></li>
-    </ul> -->
+    </ul> 
 
     
-  <!-- Пагінація хатинки  -->
+  < Пагінація хатинки  -->
  
   
    <!-- хатинка і еліпс -->
-<!--    
-  <ul class="customer__carusel">
-    <li class="customer__home">
-      <svg width="12" height="12">
-        <use href="/images/customer_reviews/slm/home.svg"></use>
-      </svg>
-    </li>
-    <li class="customer__items">
-      <svg width="12" height="12">
-        <use href="/images/customer_reviews/slm/Ellipse.svg"></use>
-      </svg>
-    </li> 
-   <li class="customer__items">
-      <svg width="12" height="12">
-        <use href="/images/customer_reviews/slm/Ellipse.svg"></use>
-      </svg>
-    </li>
-  </ul>
+   
 </div>
 </div>
-</section>  --> 
+</section>  
 
